# Compass

./: .clang-format  .clangd  .gitignore  .style.yapf  CMakeLists.txt  Dockerfile  analyze.py  analyze1d.py  analyze2d.py  cherrypick1d.py  cherrypick2d.py  config.py  pyrightconfig.json  repos.md  space.py  stat1d.py  stat1d_kmeans++.py  stat1d_kmedoids.py  stat1d_proclus.py  stat_proclus.py
clustering/: fvecs_base_to_float32.py  hdbscan.py  proclus.py
clustering/stats/: stat1d_kmeans.py
clustering/utils/: transplant_proclus_cpu.py
exp/top10/: 1d_r_old_exp.sh
exp/top100/: 1d-k-exp.sh  1d_r_exp_f4.sh  2d-graph-exp.sh  2d-ivf-exp.sh  2d-k-exp.sh
include/: RTree.h  avl.h  config.h
include/acorn/: ACORN.h  AcornUtils.h  HNSW.h  IndexACORN.h  IndexHNSW.h  auxiliary.h
include/hnswlib/: hnswalg.h  rng.h  space_l1.h  space_l2.h
include/methods/: Compass.h  Compass1d.h  Compass1dImi.h  Compass1dK.h  Compass1dKCg.h  Compass1dKGr.h  Compass1dKIcg.h  Compass1dKOr.h  Compass1dKOrCg.h  Compass1dKQicg.h  Compass1dPca.h  Compass1dPcaCg.h  Compass1dPcaIcg.h  Compass1dPcaQicg.h  Compass1dPostK.h  Compass1dX.h  Compass1dXCg.h  Compass1dXK.h  Compass1dXKCg.h  CompassF1d.h  CompassGraph.h  CompassGraph1d.h  CompassImi1d.h  CompassIvf.h  CompassIvf1d.h  CompassIvf1dImi.h  CompassK.h  CompassKCg.h  CompassKIcg.h  CompassKOr.h  CompassKOrCg.h  CompassKQicg.h  CompassPca.h  CompassPcaCg.h  CompassPcaIcg.h  CompassPcaQicg.h  CompassPostK.h  CompassR.h  CompassR1d.h  CompassRImi1d.h  (+9 more)
include/packed_hnswlib/: bruteforce.h  hnswalg.h
include/utils/: Pod.h  card.h  funcs.h  out.h  predicate.h  reader.h
plotting/: analyze2d.py  cherrypick1d.py  config.py
preparation/: hybrid_2d_prepare.sh  siftsmall.sh
preparing/: deep10m_prepare.sh  filter_prepare.sh  hybrid_1d_prepare.sh  hybrid_2d_prepare.sh  hybrid_3d_prepare.sh  hybrid_4d_prepare.sh  hybrid_5d_prepare.sh  hybrid_6d_prepare.sh  siftsmall.sh
scripts/: camera.py  check-duplicate.py  cherrypick.py  compose.py  config.py  distribute.py  fbin_to_fvecs.py  gen-attr-revision.py  gen-data-revision-anticorrelated.py  gen-data-revision-large.py  gen-data-revision.py  gen-filter-revision-large.py  gen-filter-revision.py  gen-query-real.py  gen-query-revision.py  notify.py  prepare-parquet-attrs-real.py  prepare-parquet-attrs.py  prepare-parquet-high-dim.py  prepare-parquet-large.py  prepare-parquet.py  revision.py  summarize.py  visualize.py
scripts/baselines/: bench-milvus-real-iter.py  bench-milvus-real.py  bench-milvus-revision.py  bench-milvus.py  bench-weaviate-real.py  bench-weaviate-revision.py  bench-weaviate-sweeping.py  bench-weaviate.py  milvus.yaml  prepare-milvus-real.py  prepare-milvus-revision.py  prepare-milvus.py  prepare-weaviate-real.py  prepare-weaviate-revision.py  prepare-weaviate.py  utils.py
scripts/clustering/: bisecting_kmeans.py  clustering.py  fvecs_base_to_float32 copy.py  fvecs_query_to_float32.py  hdbscan.py  kmedoids.py  kmedoids_misc.py  kmedoids_pyclus.py  llem.py  proclus.py  transplant_ivf.py  transplant_proclus.py  transplant_proclus_gpu.py
scripts/misc/: hybrid_1d_prepare.sh  hybrid_2d_prepare.sh  hybrid_prepare.sh  perf.sh  siftsmall.sh  test.sh
scripts/ours/: 1d_f_exp.sh  1d_graph_exp.sh  1d_ivf_exp_diverse_nprobe.sh  1d_r_exp.sh  1d_r_exp_M_16_efc_100_nlist_1000_efs_{150,300}_nrel_50_mincomp_1000.sh  1d_r_exp_M_16_efc_200_nlist_1000_efs_{100,200}_nrel_50_mincomp_1000.sh  1d_r_exp_M_32_efc_100_nlist_1000_efs_200_nrel_200_mincomp_3000.sh  1d_r_exp_M_32_efc_100_nlist_500_efs_200_nrel_200_mincomp_3000.sh  (+32 more)
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  binary-to-ascii.cpp  cluster-imbalance-factor-pca.cpp  cluster-imbalance-factor.cpp  cluster_imbalance_factor.cpp  compute-filter-groundtruth.cpp  compute-groundtruth-cheating.cpp  compute-groundtruth-revision-filter.cpp  compute-groundtruth-revision.cpp  compute-groundtruth-rg.cpp  compute-groundtruth.cpp  compute_filter_groundtruth.cpp  compute_groundtruth.cpp  generate-attributes.cpp  generate_attributes.cpp  prepare-for-navix-high-dim.cpp  prepare-for-navix-revision.cpp  prepare-for-navix.cpp  top-k-in-cluster-hist-pca.cpp  top-k-in-cluster-hist.cpp  top_k_in_cluster_hist.cpp  top_k_in_cluster_hist_proclus.cpp
src/benchmarks/: CMakeLists.txt  bench-acorn-build.cpp  bench-acorn-neo.cpp  bench-acorn-revision-filter.cpp  bench-acorn-revision.cpp  bench-acorn.cpp  bench-compass-1d-bikmeans-cg.cpp  bench-compass-1d-bikmeans-icg.cpp  bench-compass-1d-bikmeans-or.cpp  bench-compass-1d-bikmeans-qicg.cpp  bench-compass-1d-bikmeans.cpp  bench-compass-1d-idec.cpp  bench-compass-1d-imi.cpp  bench-compass-1d-ivf.cpp  bench-compass-1d-k-cg.cpp  bench-compass-1d-k-gr.cpp  bench-compass-1d-k-icg.cpp  bench-compass-1d-k-or-cg.cpp  bench-compass-1d-k-or.cpp  bench-compass-1d-k-qicg.cpp  bench-compass-1d-k.cpp  bench-compass-1d-kmedoids-cg.cpp  bench-compass-1d-kmedoids.cpp  bench-compass-1d-llem.cpp  bench-compass-1d-pca-cg.cpp  bench-compass-1d-pca-icg.cpp  bench-compass-1d-pca-qicg.cpp  bench-compass-1d-pca.cpp  bench-compass-1d-post-k-navix.cpp  bench-compass-1d-post-k-th.cpp  bench-compass-1d-post-k.cpp  bench-compass-bikmeans-cg.cpp  bench-compass-bikmeans-icg.cpp  bench-compass-bikmeans-qicg.cpp  bench-compass-bikmeans.cpp  bench-compass-build.cpp  bench-compass-f-1d.cpp  bench-compass-graph-1d.cpp  bench-compass-graph-old.cpp  bench-compass-graph.cpp  (+88 more)
src/tests/: CMakeLists.txt  debug-iterative-hnsw.cpp  test-bitset.cpp  test-coroutine.cpp  test-hnsw-sq.cpp  test-hnsw.cpp  test-hnswsq.cpp  test-intersection.cpp  test-ip-rg.cpp  test-iterative-hnsw-against-gt.cpp  test-iterative-hnsw-batch-neo.cpp  test-iterative-hnsw-batch.cpp  test-iterative-hnsw-neo.cpp  test-iterative-hnsw-sq.cpp  test-iterative-hnsw.cpp  test-ivfpq.cpp  test-ivfsq.cpp  test-l2spaceb.cpp  test-lsh.cpp  test-reentrant-hnsw.cpp  test-rng.cpp  test-rtree.cpp  test-rtree4d.cpp  test-sq.cpp  test-sse.cpp  test.cpp  test_hnsw.cpp  test_ivfpq.cpp  test_omp.cpp  test_reentrant_hnsw.cpp  test_rng.cpp  test_rtree.cpp  test_sse.cpp
src/tests/acorn/: CMakeLists.txt  test_acorn.cpp  utils.cpp
(+204 files in other folders)
