link_libraries(Boost::filesystem)

# Baseline
add_executable(bench_compass_ivf_1d bench_compass_ivf_1d.cpp)
add_executable(bench_compass_ivf_1d_imi bench_compass_ivf_1d_imi.cpp)
add_executable(bench_compass_ivf_1d_kmeanspp bench_compass_ivf_1d_kmeans++.cpp)
add_executable(bench_compass_ivf_1d_bikmeans bench_compass_ivf_1d_bikmeans.cpp)
add_executable(bench_compass_graph_1d bench_compass_graph_1d.cpp)
add_executable(bench_hop_hnsw_1d bench_hop_hnsw_1d.cpp)
# add_executable(bench_compass_nsg bench_compass_nsg.cpp)

# Legacy
# add_executable(bench_compass_r_trick_1d bench_compass_r_trick_1d.cpp)
add_executable(bench_compass_1d_k_gr bench_compass_1d_k_gr.cpp)
add_executable(bench_compass_1d_k_or bench_compass_1d_k_or.cpp)
add_executable(bench_compass_1d_k_or_cg bench_compass_1d_k_or_cg.cpp)

# KMeans and variants
add_executable(bench_compass_1d_k bench_compass_1d_k.cpp)
add_executable(bench_compass_1d_k_cg bench_compass_1d_k_cg.cpp)
add_executable(bench_compass_1d_kmedoids bench_compass_1d_kmedoids.cpp)
add_executable(bench_compass_1d_kmedoids_cg bench_compass_1d_kmedoids_cg.cpp)

# Decent clustering
add_executable(bench_compass_1d_bikmeans bench_compass_1d_bikmeans.cpp)
add_executable(bench_compass_1d_bikmeans_cg bench_compass_1d_bikmeans_cg.cpp)
add_executable(bench_compass_1d_bikmeans_or bench_compass_1d_bikmeans_or.cpp)
add_executable(bench_compass_1d_pca bench_compass_1d_pca.cpp)
add_executable(bench_compass_1d_pca_cg bench_compass_1d_pca_cg.cpp)

# Novel clustering
add_executable(bench_compass_1d_llem bench_compass_1d_llem.cpp)
add_executable(bench_compass_1d_idec bench_compass_1d_idec.cpp)

# Baseline
add_executable(bench_compass_ivf bench_compass_ivf.cpp)
add_executable(bench_compass_graph bench_compass_graph.cpp)

# Legacy
add_executable(bench_compass_k_or bench_compass_k_or.cpp)
add_executable(bench_compass_k_or_cg bench_compass_k_or_cg.cpp)

# KMeans and variants
add_executable(bench_compass_k bench_compass_k.cpp)
add_executable(bench_compass_k_cg bench_compass_k_cg.cpp)
add_executable(bench_compass_bikmeans bench_compass_bikmeans.cpp)
add_executable(bench_compass_bikmeans_cg bench_compass_bikmeans_cg.cpp)

